# avr-blink

./: Cargo.toml  LICENSE  README.md  TODO.md  avr-upload.sh
.cargo/: config.toml
src/: main.rs
