[package]
name = "avr-blink"
version = "0.1.0"
authors = ["Sven Neumann <sven@svenfoo.org>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
arduino-nano-every = { path = "../avr-hal/boards/arduino-nano-every" }

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

